tests/checker/fail/free_function_ordering_violation.can
Apple = String

Zebra = String

Unit => Zebra {
    "z"
}

Unit => Apple {
    "a"
}

Unit => Program {
    Apple() -> Print
    Zebra() -> Print
}
